# pcanwork

./: .gitignore  Cargo.toml  README.md  aaaaa.dbc  build.rs  diag_devices.py  pcanwork.py  probe2.py  project.zcp  r1.md  r2.md  sample_record.csv  send_list.json  test_load.py  test_multicard.py  test_perchan.py  test_wired.py  zz_mcp.py
.github/workflows/: apply-slint-window-fix.yml  fix-slint-child-window.yml  one-shot-slint-child-window-fix.yml
GCAN/: ECanVci.h
installer/: pack.py  pcanwork.iss
modbus/: Cargo.toml  README.md  build.rs  make_icon.py
modbus/certs/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
modbus/src/: backend.rs  expr.rs  format.rs  main.rs  protocol.rs  tls.rs  windows_dpi.rs
modbus/ui/: app.slint
serial/: Cargo.toml  build.rs
serial/src/: main.rs
serial/ui/: app.slint
src/: blf.rs  can.rs  chart.rs  convert.rs  dbc.rs  expr.rs  ipc.rs  main.rs  msg_table.rs  render.rs  settings.rs  sim.rs  tree.rs  tx.rs  vary.rs  wire_chart.rs  wire_dialogs.rs  wire_main.rs  wire_ota.rs  wire_playback.rs  wire_pyauto.rs  wire_sim.rs  wire_tx.rs
src/ota/: mod.rs  uds.rs  xcp.rs
templates/: example_bms_test.py  example_multi_card.py  run_suite.py
ui/: AppWindow.slint  CacheConfigWindow.slint  ChannelConfigWindow.slint  ChartWindow.slint  ConsoleHelpWindow.slint  ConvertWindow.slint  OtaWindow.slint  PlaybackWindow.slint  README.md  ScriptRunnerWindow.slint  SignalSelectWindow.slint  SimPanelWindow.slint  SimPropWindow.slint  TriggerWindow.slint  TxWindow.slint  UdsWindow.slint  XcpWindow.slint  app.slint  common.slint  main.slint  split_manifest.json
