[package]
name = "pcanwork"
version = "0.1.3"
edition = "2024"

# 工作区: pcanwork(本包) + serial(串口工具) + modbus(Modbus 工具)。
# 一次构建产出多个独立 exe, 不打包进同一个。
[workspace]
members = ["serial", "modbus"]

[dependencies]
can-dbc = "9.1.0"
chrono = "0.4"
flate2 = "1.1.9"
libloading = "0.9.0"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = { version = "1.16.1", features = ["raw-window-handle-06"] }

[build-dependencies]
embed-manifest = "1.5.0"
slint-build = "1.16.1"
winresource = "0.1"

# 体积优化(工作区根 profile, 对 pcanwork 与 serial 同时生效)
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
