[package]
name = "serial-tool"
version = "0.1.3"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
rfd = "0.15"
serialport = "4"
slint = "1.17.0"

[build-dependencies]
slint-build = "1.17.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
# 注: [profile.release] 已移到工作区根 (Pcanwork/Cargo.toml), 工作区只认根的 profile。
